--- a/test/test.cfg
+++ b/test/test.cfg
@@ -4,7 +4,7 @@ process BTagDemo =  {
 
   source = PoolSource {
    untracked vstring fileNames = {
-'file:/home/bilibao/CMSSW/CMSSW_1_5_0_pre2/src/b_jets.root'
+'file:/tmp/arizzi/src/boh.root'
  }
   }
      # Magnetic Field
@@ -17,29 +17,22 @@ include "Configuration/StandardSequences/data/MixingNoPileUp.cff"
 include "Configuration/StandardSequences/data/VtxSmearedGauss.cff"
 
     include "TrackingTools/TransientTrack/data/TransientTrackBuilder.cfi"
-#   include "RecoBTau/TrackTools/data/trackIPProducer.cfi"
-
-    module tkip =  TrackIPProducer 
-    { 
-      string jetTracks = "jetTracksAssociator"
-      string primaryVertex = "offlinePrimaryVerticesFromCTFTracks"
-
-     }
-
+   include "RecoBTag/ImpactParameter/data/impactParameter.cff"
+   include "RecoBTag/TrackCounting/data/trackCounting.cff"
 
     module out = PoolOutputModule {
-        untracked string fileName = '/tmp/aa.root'
+        untracked string fileName = '/tmp/arizzi/aa2.root'
     }
 
   module ipAnalyzer = IPAnalyzer {
         InputTag jets        = iterativeCone5CaloJets
         InputTag association = jetTracksAssociator
-        InputTag ipassociation = tkip
+        InputTag ipassociation = impactParameterTagInfos
     }
 
 
  
-  path p = {offlinePrimaryVerticesFromCTFTracks,jetTracksAssociator,tkip,ipAnalyzer}
+  path p = {offlinePrimaryVerticesFromCTFTracks,jetTracksAssociator,impactParameterTagInfos,trackCountingJetTags,ipAnalyzer}
 
   endpath outpath = { out }
 
