--- a/test/test.cfg
+++ b/test/test.cfg
@@ -4,7 +4,7 @@ process BTagDemo =  {
 
   source = PoolSource {
    untracked vstring fileNames = {
-'file:/tmp/arizzi/src/boh.root'
+'file:/home/bilibao/CMSSW/CMSSW_2007-05-14/src/Configuration/ReleaseValidation/data/b_jets.root'
  }
   }
      # Magnetic Field
@@ -19,9 +19,10 @@ include "Configuration/StandardSequences/data/VtxSmearedGauss.cff"
     include "TrackingTools/TransientTrack/data/TransientTrackBuilder.cfi"
    include "RecoBTag/ImpactParameter/data/impactParameter.cff"
    include "RecoBTag/TrackCounting/data/trackCounting.cff"
+   include "RecoBTag/TrackProbability/data/trackProbability.cff"
 
     module out = PoolOutputModule {
-        untracked string fileName = '/tmp/arizzi/aa2.root'
+        untracked string fileName = 'btag.root'
     }
 
   module ipAnalyzer = IPAnalyzer {
@@ -32,7 +33,7 @@ include "Configuration/StandardSequences/data/VtxSmearedGauss.cff"
 
 
  
-  path p = {offlinePrimaryVerticesFromCTFTracks,jetTracksAssociator,impactParameterTagInfos,trackCountingJetTags,ipAnalyzer}
+  path p = {offlinePrimaryVerticesFromCTFTracks,jetTracksAssociator,impactParameterTagInfos,trackCountingJetTags,ipAnalyzer,trackProbabilityJetTags}
 
   endpath outpath = { out }
 
