example for stripping everything but calib useful data

--- a/test/test.cfg
+++ b/test/test.cfg
@@ -4,7 +4,7 @@ process BTagDemo =  {
 
   source = PoolSource {
    untracked vstring fileNames = {
-'file:/home/bilibao/CMSSW/CMSSW_2007-05-14/src/Configuration/ReleaseValidation/data/b_jets.root'
+'file:/home/bilibao/CMSSW/CMSSW_2007-05-14/src/Configuration/ReleaseValidation/data/ttbar.root'
  }
   }
      # Magnetic Field
@@ -33,7 +33,7 @@ include "Configuration/StandardSequences/data/VtxSmearedGauss.cff"
 
 
  
-  path p = {offlinePrimaryVerticesFromCTFTracks,jetTracksAssociator,impactParameterTagInfos,trackCountingJetTags,ipAnalyzer,trackProbabilityJetTags}
+  path p = {offlinePrimaryVerticesFromCTFTracks,jetTracksAssociator,impactParameterTagInfos,trackCountingTagInfos,ipAnalyzer,trackProbabilityTagInfos}
 
   endpath outpath = { out }
 
