optionally recompute jet direction with tracks

--- a/test/test.cfg
+++ b/test/test.cfg
@@ -22,7 +22,7 @@ include "Configuration/StandardSequences/data/VtxSmearedGauss.cff"
    include "RecoBTag/TrackProbability/data/trackProbability.cff"
 
     module out = PoolOutputModule {
-        untracked string fileName = 'btag.root'
+        untracked string fileName = 'btag2.root'
     }
 
   module ipAnalyzer = IPAnalyzer {
