new structure with plugin separated

--- a/test/test.cfg
+++ b/test/test.cfg
@@ -1,13 +1,16 @@
-process BTagDemo =  {
+process BTagDemo2 =  {
   #keep the logging output to a nice level
   include "FWCore/MessageLogger/data/MessageLogger.cfi"
 
   source = PoolSource {
    untracked vstring fileNames = {
-'file:/home/bilibao/CMSSW/CMSSW_2007-05-14/src/Configuration/ReleaseValidation/data/ttbar.root'
+'file:recoclean.root'
  }
   }
-     # Magnetic Field
+  
+  untracked PSet maxEvents = {untracked int32 input = -1}
+
+   # Magnetic Field
     include "MagneticField/Engine/data/volumeBasedMagneticField.cfi"
     include "Geometry/CMSCommonData/data/cmsIdealGeometryXML.cfi"
 include "Configuration/StandardSequences/data/Reconstruction.cff"
@@ -33,7 +36,7 @@ include "Configuration/StandardSequences/data/VtxSmearedGauss.cff"
 
 
  
-  path p = {offlinePrimaryVerticesFromCTFTracks,jetTracksAssociator,impactParameterTagInfos,trackCountingTagInfos,ipAnalyzer,trackProbabilityTagInfos}
+  path p = {impactParameterTagInfos}
 
   endpath outpath = { out }
 
