migrate JTA code and cfi to RecoJets

--- a/test/calibrationExample.cfg
+++ b/test/calibrationExample.cfg
@@ -12,7 +12,7 @@ process calibJob =  {
                 untracked string fileName = 'file:calib.root'
                 untracked vstring outputCommands = {
                         "drop *",
-                        "keep *_jetTracksAssociator_*_*",
+                        "keep *_ic5JetTracksAssociatorAtVertex_*_*",
                         "keep *_iterativeCone5CaloJets_*_*",
                         "keep *_impactParameterTagInfos_*_*",
                   #      "keep recoTrackExtras_*_*_*",
