--- a/test/test.cfg
+++ b/test/test.cfg
@@ -29,8 +29,8 @@ include "Configuration/StandardSequences/data/VtxSmearedGauss.cff"
     }
 
   module ipAnalyzer = IPAnalyzer {
-        InputTag jets        = iterativeCone5CaloJets
-        InputTag association = jetTracksAssociator
+        InputTag jets          = iterativeCone5CaloJets
+        InputTag association   = ic5JetTracksAssociatorAtVertex
         InputTag ipassociation = impactParameterTagInfos
     }
 
