get rid of old xml. use streamed object to binary file as fake cond

--- a/test/test.cfg
+++ b/test/test.cfg
@@ -4,7 +4,7 @@ process BTagDemo2 =  {
 
   source = PoolSource {
    untracked vstring fileNames = {
-'file:recoclean.root'
+'file:/data/arizzi/test17x/CMSSW_1_7_0_pre5/src/BJets_Pt_50_120.root'
  }
   }
   
@@ -21,8 +21,9 @@ include "Configuration/StandardSequences/data/VtxSmearedGauss.cff"
 
     include "TrackingTools/TransientTrack/data/TransientTrackBuilder.cfi"
    include "RecoBTag/ImpactParameter/data/impactParameter.cff"
-   include "RecoBTag/TrackCounting/data/trackCounting.cff"
-   include "RecoBTag/TrackProbability/data/trackProbability.cff"
+
+   include "RecoBTag/TrackProbability/data/trackProbabilityFakeCond.cfi"
+#    include "RecoBTag/TrackProbability/data/trackProbabilityFrontierCond.cfi"
 
     module out = PoolOutputModule {
         untracked string fileName = 'btag2.root'
@@ -36,8 +37,8 @@ include "Configuration/StandardSequences/data/VtxSmearedGauss.cff"
 
 
  
-  path p = {impactParameterTagInfos}
+  path p = {impactParameterTagInfos,ipAnalyzer}
 
-  endpath outpath = { out }
+//  endpath outpath = { out }
 
 }
