fixes for new fake/front cond

--- a/test/test.cfg
+++ b/test/test.cfg
@@ -4,7 +4,8 @@ process BTagDemo2 =  {
 
   source = PoolSource {
    untracked vstring fileNames = {
-'file:/data/arizzi/test17x/CMSSW_1_7_0_pre5/src/BJets_Pt_50_120.root'
+'file:/data/arizzi/test17x/123EB297-096F-DC11-960F-00304885B264.root'
+#/data/arizzi/test17x/CMSSW_1_7_0_pre5/src/BJets_Pt_50_120.root'
  }
   }
   
